creation parties, chapitre, biblio. Mise à jour des importations et des ref biblio. Compilation de la thèse, parties et chapitres

--- a/these.tex
+++ b/these.tex
@@ -22,10 +22,10 @@
 
 	\tableofcontents
 
-    \input{imports}
+    \input{imports_thesis}
 
 	\bibliographystyle{plain}
-    \bibliography{}
+    \bibliography{/home/ecornillon/Documents/doctorat/these/thesis_butler/bibliography/biblio}
 
 \end{document}
 
